syntax = "proto2";

package process;

option java_package = "org.flexiblepower.proto";
option java_outer_classname = "ServiceProto";

enum ProcessState {
  STARTING = 0;
  INITIALIZING = 1;
  RUNNING = 2;
  SUSPENDED = 3;
  TERMINATED = 4;
}

message GoToProcessStateMessage {
  required string processId = 1;
  required ProcessState targetState = 2;
}

message ResumeProcessMessage {
  required string processId = 1;
  required bytes stateData = 2;
}

message ProcessStateUpdateMessage {
  required string processId = 1;
  required ProcessState state = 2;
  optional bytes stateData = 3;
}

message SetConfigMessage {
  required string processId = 1;
  required bool isUpdate = 2; 
  map<string, string> config = 3;
}

message ErrorMessage {
  required string processId = 1;
  required string debugInformation = 2;
}